Bug #156263 fix: Front End>> Repeatable Table Overlapping on other fields of forms.

--- a/src/components/com_tjucm/media/css/tjucm.css
+++ b/src/components/com_tjucm/media/css/tjucm.css
@@ -18,3 +18,14 @@ width:200px !important;
     width: 100px !important;
     height: auto;
 }
+
+.form-horizontal .control-group .control-label{
+	width: 0px;
+	padding-top: 20px;
+}
+
+.form-horizontal .control-group .controls{
+	margin-left: 90px;
+	margin-top: 20px;
+    text-align: left;
+}
